tugas css layout pertama

--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-
+    <div id="wrapper">
+        <div id="header"></div>
+        <div id="left"></div>
+        <div id="right"></div>
+        <div id="right2"></div>
+        <div id="footer"></div>
+    </div>
 </body>
 </html>
